# BattleShipPr3

./: .gitignore  CMakeLists.txt  NoUsarMakefile  README.md
libraries/include/: JsonDeserilizer.hpp  Structures.hpp  Types.hpp  Visual.hpp
libraries/source/: JsonDeserilizer.cpp  Structures.cpp  Types.cpp  Visual.cpp
test/source/: Test.cpp
